fixed the refreshToken and added some validations